--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     color: white;
 }
 
-
 * {
     box-sizing: border-box;
 }
@@ -19,7 +18,6 @@ header {
     font-size: 40px;
     text-align: center;
 }
-
 
 .container-bottom {
     position: absolute;
@@ -36,14 +34,28 @@ header {
     flex-direction: column;
 }
 
-
 h1 {
     font-weight: 400;
     font-size: 30px;
+    margin-bottom: 5px;
+}
+
+p {
+    font-size: 20px;
+    margin-top: 0;
 }
 
 h2 {
     font-weight: 400;
+    margin: 0;
+}
+
+#displayWins {
+    margin-bottom: 20px;
+}
+
+#displayAttempts {
+    margin-bottom: 10px;
 }
 
 form {
@@ -92,16 +104,33 @@ button {
     font-weight: 600;
     cursor: pointer;
     box-shadow: 0px 5px 10px 3px rgb(0 0 0 / 50%);
+    transition: 0.5s ease;
 }
 
-#resetButton {
+#resetButton, #rewardButton {
     width: 250px;
     height: 75px;
     font-size: 40px;
 }
 
-button:hover {
-    background-color: #d63475;
+#rewardButton {
+    height: 120px;
+}
+
+#rewardImg {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform 0.1s ease-in-out;
+    z-index: 9999;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+}
+
+#rewardImg.show {
+    transform: translate(-50%, -50%) scale(1)
 }
 
 @media (max-width: 850px) {
