--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ header {
 h1 {
     font-weight: 400;
     font-size: 30px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    margin-top: 0;
 }
 
 p {
