--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ input {
     color: white;
     background-color: transparent;
     border-radius: 4px;
+    font-size: 18px;
+    text-align: center;
+    opacity: 0.8;
 }
 
 input:hover {
