--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    transition: transform 0.1s ease-in-out;
+    transition: transform 0.3s ease-in-out;
     z-index: 9999;
     width: 100vw;
     height: 100vh;
@@ -134,7 +134,8 @@ button {
 }
 
 #rewardImg.show {
-    transform: translate(-50%, -50%) scale(1)
+    transform: translate(-50%, -50%) scale(1);
+    filter: drop-shadow(0 0 20px rgba(255, 0, 0, 0.7));
 }
 
 @media (max-width: 850px) {
